<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_actualizar"
        android:title="@string/ordenar_por_casos" />

    <item
        android:id="@+id/item_ord_fallecidos"
        android:title="@string/ordenar_por_fallecidos" />

    <item
        android:id="@+id/item_ord_recuperados"
        android:title="@string/ordenar_por_recuperados" />

    <item
        android:id="@+id/item_ord_fallecidos_hoy"
        android:title="@string/ordenar_por_fallecidos_hoy" />

    <item
        android:id="@+id/item_ord_graves"
        android:title="@string/ordenar_por_graves" />

    <item
        android:id="@+id/item_ord_test"
        android:title="@string/ordenar_por_test" />

    <item
        android:id="@+id/item_ord_test_por_millon"
        android:title="@string/ordenar_por_test_por_millon" />

    <item
        android:id="@+id/item_actualizar_fecha"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/actualizar_fecha">
    </item>

</menu>